--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title></title>
+    <title>Ice Cream</title>
   </head>
   <body>
     <div class="container">
-      
+      <h1>These are my favorite flavors:</h1>
+      <ul>
+        <li><span id="flavor1"></span></li>
+        <li><span id="flavor2"></span></li>
+        <li><span id="flavor3"></span></li>
+        <li><span id="flavor4"></span></li>
+      </ul>
+
 
     </div>
   </body>
